--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,6 +1,6 @@
 <template name="postsList">
   <div class="posts">
-    {{#each posts}}
+    {{#each postsWithRank }}
       {{> postItem}}
     {{/each}}
     {{#if hasMorePosts}}
